--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Polynet"]
-	path = Polynet
-	url = https://github.com/BlueCannonBall/Polynet.git
+[submodule "Polyweb"]
+	path = Polyweb
+	url = https://github.com/BlueCannonBall/Polyweb.git
