[auto] Update Polyweb and Polynet

--- a/Polybuild.toml
+++ b/Polybuild.toml
@@ -6,4 +6,8 @@ install = "/usr/local/bin"
 
 [options]
 compilation-flags = "-Wall -std=c++17 -O3 -pthread"
-libraries = ["ssl", "crypto", "sqlite3"]
+libraries = ["sqlite3", "ssl", "crypto"]
+
+[env.OS.Windows_NT.options]
+compilation-flags = "-Wall -std=c++17 -O3 -pthread -static-libgcc -static-libstdc++"
+libraries = ["sqlite3", "ssl", "crypto", "z", "ws2_32", "crypt32"]
